add set dir
